Ejercicios/TP2/src/tp2/sintaxCParser.java
// Generated from /Users/gframirez/Documents/UBP/Q9/TC/Ejercicios/TP2/src/tp2/sintaxC.g4 by ANTLR 4.5.3
package tp2.mg;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class sintaxCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, INT=2, DOUBLE=3, CHAR=4, VOID=5, IF=6, ELSE=7, RETURN=8, TRUE=9, 
		FALSE=10, WHILE=11, FOR=12, SEMI=13, COMMA=14, OPAR=15, CPAR=16, OBRACE=17, 
		CBRACE=18, OBRACKET=19, CBRACKET=20, ASSIGN=21, MULTIPLYASSIGN=22, DIVIDEASSIGN=23, 
		MODULUSASSIGN=24, PLUSASSIGN=25, MINUSASSIGN=26, PLUS=27, LESS=28, DIVIDE=29, 
		MULTIPLY=30, MODULUS=31, PLUSPLUS=32, LESSLESS=33, QUESTION=34, OR=35, 
		AND=36, NOT=37, EQUAL=38, NOTEQUAL=39, GREATERTHAN=40, LESSTHAN=41, GREATERTHANEQUAL=42, 
		LESSTHANEQUAL=43, INTNUMBER=44, FLOATNUMBER=45, ID=46, CHARVALUE=47;
	public static final int
		RULE_prog = 0, RULE_instructions = 1, RULE_instr = 2, RULE_varDeclaration = 3, 
		RULE_varDeclList = 4, RULE_varDeclInitialize = 5, RULE_varId = 6, RULE_typeSpecifier = 7, 
		RULE_returnTypeSpecifier = 8, RULE_funcDeclaration = 9, RULE_paramList = 10, 
		RULE_statement = 11, RULE_instBlock = 12, RULE_statementList = 13, RULE_expressionStatement = 14, 
		RULE_selectionStatement = 15, RULE_iterationStatement = 16, RULE_whileStatement = 17, 
		RULE_forStatement = 18, RULE_forDefinition = 19, RULE_forInit = 20, RULE_semicolon = 21, 
		RULE_returnStatement = 22, RULE_assignmentOperator = 23, RULE_expression = 24, 
		RULE_simpleExpression = 25, RULE_andExpression = 26, RULE_unaryRelExpression = 27, 
		RULE_relExpression = 28, RULE_relationalOperator = 29, RULE_sumExpression = 30, 
		RULE_arithSumOperator = 31, RULE_term = 32, RULE_arithMultOperator = 33, 
		RULE_unaryExpression = 34, RULE_unaryOperator = 35, RULE_factor = 36, 
		RULE_value = 37, RULE_call = 38, RULE_args = 39, RULE_argList = 40, RULE_resValue = 41;
	public static final String[] ruleNames = {
		"prog", "instructions", "instr", "varDeclaration", "varDeclList", "varDeclInitialize", 
		"varId", "typeSpecifier", "returnTypeSpecifier", "funcDeclaration", "paramList", 
		"statement", "instBlock", "statementList", "expressionStatement", "selectionStatement", 
		"iterationStatement", "whileStatement", "forStatement", "forDefinition", 
		"forInit", "semicolon", "returnStatement", "assignmentOperator", "expression", 
		"simpleExpression", "andExpression", "unaryRelExpression", "relExpression", 
		"relationalOperator", "sumExpression", "arithSumOperator", "term", "arithMultOperator", 
		"unaryExpression", "unaryOperator", "factor", "value", "call", "args", 
		"argList", "resValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'int'", "'double'", "'char'", "'void'", "'if'", "'else'", 
		"'return'", "'true'", "'false'", "'while'", "'for'", "';'", "','", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'='", "'*='", "'/='", "'%='", "'+='", 
		"'-='", "'+'", "'-'", "'/'", "'*'", "'%'", "'++'", "'--'", "'?'", "'||'", 
		"'&&'", "'!'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "INT", "DOUBLE", "CHAR", "VOID", "IF", "ELSE", "RETURN", "TRUE", 
		"FALSE", "WHILE", "FOR", "SEMI", "COMMA", "OPAR", "CPAR", "OBRACE", "CBRACE", 
		"OBRACKET", "CBRACKET", "ASSIGN", "MULTIPLYASSIGN", "DIVIDEASSIGN", "MODULUSASSIGN", 
		"PLUSASSIGN", "MINUSASSIGN", "PLUS", "LESS", "DIVIDE", "MULTIPLY", "MODULUS", 
		"PLUSPLUS", "LESSLESS", "QUESTION", "OR", "AND", "NOT", "EQUAL", "NOTEQUAL", 
		"GREATERTHAN", "LESSTHAN", "GREATERTHANEQUAL", "LESSTHANEQUAL", "INTNUMBER", 
		"FLOATNUMBER", "ID", "CHARVALUE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "sintaxC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public sintaxCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(sintaxCParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				instructions(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitInstructions(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		return instructions(0);
	}

	private InstructionsContext instructions(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		InstructionsContext _localctx = new InstructionsContext(_ctx, _parentState);
		InstructionsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_instructions, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(90);
			instr();
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new InstructionsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_instructions);
					setState(92);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(93);
					instr();
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class InstrContext extends ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public SemicolonContext semicolon() {
			return getRuleContext(SemicolonContext.class,0);
		}
		public FuncDeclarationContext funcDeclaration() {
			return getRuleContext(FuncDeclarationContext.class,0);
		}
		public InstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterInstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitInstr(this);
		}
	}

	public final InstrContext instr() throws RecognitionException {
		InstrContext _localctx = new InstrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instr);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				varDeclaration();
				setState(100);
				semicolon();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				funcDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			typeSpecifier();
			setState(106);
			varDeclList(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public VarDeclInitializeContext varDeclInitialize() {
			return getRuleContext(VarDeclInitializeContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(sintaxCParser.COMMA, 0); }
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterVarDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitVarDeclList(this);
		}
	}

	public final VarDeclListContext varDeclList() throws RecognitionException {
		return varDeclList(0);
	}

	private VarDeclListContext varDeclList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, _parentState);
		VarDeclListContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_varDeclList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			varDeclInitialize();
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarDeclListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_varDeclList);
					setState(111);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(112);
					match(COMMA);
					setState(113);
					varDeclInitialize();
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarDeclInitializeContext extends ParserRuleContext {
		public VarIdContext varId() {
			return getRuleContext(VarIdContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclInitializeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclInitialize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterVarDeclInitialize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitVarDeclInitialize(this);
		}
	}

	public final VarDeclInitializeContext varDeclInitialize() throws RecognitionException {
		VarDeclInitializeContext _localctx = new VarDeclInitializeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclInitialize);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				varId();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(sintaxCParser.ID, 0); }
		public VarIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterVarId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitVarId(this);
		}
	}

	public final VarIdContext varId() throws RecognitionException {
		VarIdContext _localctx = new VarIdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecifierContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(sintaxCParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(sintaxCParser.DOUBLE, 0); }
		public TerminalNode CHAR() { return getToken(sintaxCParser.CHAR, 0); }
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterTypeSpecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitTypeSpecifier(this);
		}
	}

	public final TypeSpecifierContext typeSpecifier() throws RecognitionException {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeSpecifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DOUBLE) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeSpecifierContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(sintaxCParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(sintaxCParser.DOUBLE, 0); }
		public TerminalNode CHAR() { return getToken(sintaxCParser.CHAR, 0); }
		public TerminalNode VOID() { return getToken(sintaxCParser.VOID, 0); }
		public ReturnTypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnTypeSpecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterReturnTypeSpecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitReturnTypeSpecifier(this);
		}
	}

	public final ReturnTypeSpecifierContext returnTypeSpecifier() throws RecognitionException {
		ReturnTypeSpecifierContext _localctx = new ReturnTypeSpecifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnTypeSpecifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DOUBLE) | (1L << CHAR) | (1L << VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDeclarationContext extends ParserRuleContext {
		public ReturnTypeSpecifierContext returnTypeSpecifier() {
			return getRuleContext(ReturnTypeSpecifierContext.class,0);
		}
		public TerminalNode ID() { return getToken(sintaxCParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(sintaxCParser.OPAR, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode CPAR() { return getToken(sintaxCParser.CPAR, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FuncDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterFuncDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitFuncDeclaration(this);
		}
	}

	public final FuncDeclarationContext funcDeclaration() throws RecognitionException {
		FuncDeclarationContext _localctx = new FuncDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcDeclaration);
		try {
			setState(142);
			switch (_input.LA(1)) {
			case INT:
			case DOUBLE:
			case CHAR:
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				returnTypeSpecifier();
				setState(130);
				match(ID);
				setState(131);
				match(OPAR);
				setState(132);
				paramList();
				setState(133);
				match(CPAR);
				setState(134);
				statement();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(ID);
				setState(137);
				match(OPAR);
				setState(138);
				paramList();
				setState(139);
				match(CPAR);
				setState(140);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public VarIdContext varId() {
			return getRuleContext(VarIdContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(sintaxCParser.COMMA, 0); }
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitParamList(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_paramList);
		try {
			setState(154);
			switch (_input.LA(1)) {
			case INT:
			case DOUBLE:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				typeSpecifier();
				setState(145);
				varId();
				setState(146);
				paramList();
				}
				break;
			case COMMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(COMMA);
				setState(149);
				typeSpecifier();
				setState(150);
				varId();
				setState(151);
				paramList();
				}
				break;
			case CPAR:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public InstBlockContext instBlock() {
			return getRuleContext(InstBlockContext.class,0);
		}
		public SelectionStatementContext selectionStatement() {
			return getRuleContext(SelectionStatementContext.class,0);
		}
		public IterationStatementContext iterationStatement() {
			return getRuleContext(IterationStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sintaxCListener ) ((sintaxCListener)listener).exitStatement(this);
		}
	}
